2002-09-21  Yuji Touya  <salmoon@users.sourceforge.net>

	* README: Add a few lines about Hot plug for 2.4.x

2002-09-20  Markus Germeier  <mager@tzi.de>

	* libmpio/mpio.c (mpio_init): 
	  added code to identify DMG+ (assumed, but should be correct)

	* mpiosh/callback.c (mpiosh_cmd_format, mpiosh_cmd_mem): 
	  added warning messages for the upcoming release.
	  (mpiosh_cmd_get, mpiosh_cmd_put): added missing printf

2002-09-20  Andreas Buesching  <crunchy@tzi.de>

	* mpiosh/mpiosh.c (mpiosh_command_regex_fix): bug fix for .*
        do not quote the '.' if next character is a '*'

	* libmpio/mpio.c (mpio_strerror): fixed stupid bug no
	23.423.543.453.453 (time to go to bed)

2002-09-19  Andreas Buesching  <crunchy@tzi.de>

	* libmpio/mpio.c (mpio_strerror): fixed a strange bug with the
	argument name. Never call an argument errno?!?

2002-09-19  Markus Germeier  <mager@tzi.de>

	* mpiosh/callback.c (mpiosh_cmd_dump, mpiosh_cmd_mget) 
	(mpiosh_cmd_mdel, mpiosh_cmd_mput): fixed handling of an abort
	* libmpio/mpio.c (MPIO_ERR_RETURN): fixed buggy define


2002-09-19  Andreas Buesching  <crunchy@tzi.de>

	* mpiosh/mpiosh.c (mpiosh_command_regex_fix): hopefully fixed a
	bug (Sorry Markus)

	* mpiosh/callback.c (mpiosh_cmd_mput): using new error handling
	functions

	* libmpio/mpio.c (mpio_errno, mpio_strerror, mpio_perror): 
	  add functions for error handling
	  (mpio_file_get, mpio_file_put, mpio_file_del): using error
	  handling functions


2002-09-19  Markus Germeier  <mager@tzi.de>

	* libmpio/mpio.c (mpio_init_internal): 
	  added code to check if the internal memory is available
	  (don't ask! :-)
	  (mpio_sync): check if selected memory is available
	* mpiosh/callback.c (mpiosh_cmd_mem): 
	  fixed external mem check
	  

2002-09-18  Markus Germeier  <mager@tzi.de>

	* mpiosh/callback.c (mpiosh_cmd_mem): 
	  external memory is only selectable if it is available
	* libmpio/mpio.c (mpio_init): added progress callback
	  for init