@@ -1,3 +1,8 @@
+2002-09-21  Andreas Buesching  <crunchy@tzi.de>
+
+	* kernel/Makefile.am: add target clean and fixed the install
+	target to not strip the kernel module
+
 2002-09-21  Yuji Touya  <salmoon@users.sourceforge.net>
 
 	* README: Add a few lines about Hot plug for 2.4.x
